<resources>
    <string name="app_name">My Calculator</string>
    <string name="calculator">Calculator</string>
    <string name="enter_first_number">Enter first Number</string>
    <string name="enter_second_number">Enter second Number</string>
    <string name="multiply">*</string>
    <string name="substract">-</string>
    <string name="divide">/</string>
    <string name="add">+</string>
</resources>