<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/calculator"
        android:textColor="#00BCD4"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_number"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="#00BCD4"
        android:ems="10"
        android:hint="@string/enter_first_number"
        android:inputType="number"
        android:textColor="#00BCD4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculator" />

    <EditText
        android:id="@+id/second_number"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/enter_second_number"
        android:inputType="number"
        android:textColorHint="#00BCD4"
        android:textColor="#00BCD4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_number" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/second_number"
        tools:layout_editor_absoluteX="-21dp">

        <Button
            android:id="@+id/sum"
            android:layout_width="55dp"
            android:layout_height="46dp"
            android:text="@string/add"
            android:backgroundTint="#00BCD4"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/substract"
            android:layout_width="55dp"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="#00BCD4"
            android:text="@string/substract"
            app:layout_constraintStart_toEndOf="@+id/sum"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="55dp"
            android:layout_height="46dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#00BCD4"
            android:text="@string/multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divide"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/divide"
            android:layout_width="55dp"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="#00BCD4"
            android:text="@string/divide"
            app:layout_constraintStart_toEndOf="@+id/substract"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="108dp"
            android:gravity="center"
            android:text="TextView"
            android:textColor="#00BCD4"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/substract" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>